Más cambios al Menú Mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,7 +57,57 @@ nav ul li .link:hover::before {
     transform: scaleX(1);
 }
 
+nav .menu {
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    min-width: 200px;
+
+    background-color: white;
+}
+
+nav .menu a {
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+}
+
+nav .menu a:hover {
+    background-color: black;
+    color: white;
+}
+
 nav .mobile {
     display: none;
+}
+
+nav .mobile .header {
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+@media screen and (max-width: 1132px) {
+    nav .link-hide{
+        display: none;
+    }
+}
+
+nav .more {
+    display: flex;
+}
+
+@media screen and (max-width: 640px) {
+    nav {
+        width: 100%;
+        padding: 0;
+    }
+    nav ul {
+        display: none;
+    }
+    nav .mobile {
+        display: block;
+    }
 }
 
